Added wallet account endpoint
