# internal/routes/api_route.go
@@ -3,6 +3,7 @@ package routes
 import (
 	"arf/currency-conversion/internal/handlers"
 	"arf/currency-conversion/internal/middlewares"
+
 	"github.com/gin-gonic/gin"
 )
 
@@ -12,8 +13,8 @@ func GetAPIRoutes(r *gin.Engine) {
 	router.POST("/login", handlers.Login)
 
 	router.Use(middlewares.VerifyToken())
-	router.GET("/exchange-rate-offer")
-	router.GET("/wallets")
+	router.POST("/create-exchange-offer", handlers.CreateExchangeOffer)
 	router.POST("/offer")
+	router.GET("/user-wallet-accounts", handlers.UserWalletAccounts)
 
 }
